# ai-music

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conversation-log.md  requirements.md  tech-design-plan.md  tech-design.md  tech-research.md
poc/: current-progress-summary.md  mix_poc_a.py  mix_real.py  poc-summary.md
poc/audio/: process_vocals.py
poc/experiments/exp-01-smoke-test/: README.md  result.md
poc/experiments/exp-02-real-vc-no-vol-fix/: README.md  result.md
poc/experiments/exp-03-real-vc-rms-fix/: README.md
poc/experiments/exp-04-real-svc-cfg07/: README.md  result.md
poc/experiments/exp-05-real-svc-cfg08/: README.md  result.md
poc/experiments/exp-06-bleedless-cross-gender/: README.md
poc/lrc-replace-experiments/: lrc-repalce-deep-research-report.md  lrc-replace-tech-research-report.md  method-comparison-evaluation.md
poc/lrc-replace-experiments/ace-step-research/: ace-step-tech-research.md  poc-b-validation-plan.md
poc/lrc-replace-experiments/exp-comparison/: README.md  results.md
poc/sound-repalce-experiments/: generate_source.py  generate_target.py  mix_real.py  poc-summary.md  poc_a_voice_replace.py
poc/sound-repalce-experiments/exp-01-smoke-test/: README.md
poc/sound-repalce-experiments/exp-02-real-vc-no-vol-fix/: README.md
poc/sound-repalce-experiments/exp-03-real-vc-rms-fix/: README.md  result.md
poc/sound-repalce-experiments/exp-04-real-svc-cfg07/: README.md
scripts/: check_env.py  check_seedvc_deps.py
src/ai_music/: __init__.py  cli.py
(+19 files in other folders)
