[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-music"
version = "0.1.0"
description = "AI 音乐处理 CLI 工具"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-music = "ai_music.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
